[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["Aleksey Strelkov <aleks.strel.8v@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.2"
aiogram = "3.0.0b3"
python-dotenv = "^0.20.0"
SQLAlchemy = "^1.4.40"
asyncpg = "^0.26.0"
greenlet = "^1.1.2"
alembic = "^1.8.1"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
