[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["Aleksey Strelkov <aleks.strel.8v@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "3.0.0b3"
python-dotenv = "^0.20.0"
SQLAlchemy = "^1.4.40"
asyncpg = "^0.26.0"
greenlet = "^1.1.2"
alembic = "^1.8.1"
redis = "^4.3.4"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
black = {version = "^22.8.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
